--- a/umpggk-biernat-hosumbek.csproj
+++ b/umpggk-biernat-hosumbek.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Field.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Message.cs" />
+    <Compile Include="Move.cs" />
     <Compile Include="Pawn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
