--- a/umpggk-biernat-hosumbek.csproj
+++ b/umpggk-biernat-hosumbek.csproj
@@ -74,6 +74,8 @@
     <Compile Include="Pawn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategy.cs" />
+    <Compile Include="WhiteStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
